--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://shivangichauhan43788:ViyLeIK2OO4KhTqH@cluster0.516tzmg.mongodb.net/Ecommerce?retryWrites=true&w=majority&appName=Cluster0
-
 PORT=5000
+FRONTEND_URL=http://localhost:5173
 MAILTRAP_HOST=sandbox.smtp.mailtrap.io
 MAILTRAP_PORT=2525
 MAILTRAP_USER=your_mailtrap_username
